feat: Implement CV and Recommendation services with repository support
- Added CVRepository for managing CV entities with various search methods.
- Introduced RecommendationRepository for handling job recommendations.
- Developed CVService to manage CV uploads, analysis, and user interactions.
- Created RecommendationService to generate and manage job recommendations based on user profiles.
- Enhanced CVAnalysisService with methods for extracting text from PDFs and analyzing CV content.
- Added functionality for saving, retrieving, and deleting CVs, as well as marking recommendations as viewed.
- Implemented statistical methods for tracking CV and recommendation metrics.
- Introduced new methods for extracting and processing data from user profiles and job listings.